--- a/coopetition_lab_quiz/templates/coopetition_lab_quiz/QuizInfo.html
+++ b/coopetition_lab_quiz/templates/coopetition_lab_quiz/QuizInfo.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 
+{% if player.language != "EN"  %}
 <p>
     请完成下面有关实验信息的测试题。当你正确的回答所有问题后,实验才会继续。
 </p>
@@ -10,6 +11,9 @@
 </p>
 <p>你可以在屏幕下方看到实验的相关信息帮助你答题。</p>
 
+{% endif %}
+
+{% if player.language != "CN"  %}
 
 <p>
 Please complete the following quiz questions based on the above information.
@@ -20,6 +24,7 @@ Please complete the following quiz questions based on the above information.
     Check and correct the wrong answers before checking your answers again.
 </p>
 <p>The information and examples of the experiment are shown below to help you complete the quiz.</p>
+{% endif %}
 
 {% endblock %}
 
