getting ready for lab experiment of coopetition

--- a/coopetition_inclass_quiz/templates/coopetition_inclass_quiz/StartPage.html
+++ b/coopetition_inclass_quiz/templates/coopetition_inclass_quiz/StartPage.html
@@ -14,6 +14,9 @@
     你在本实验获得的报酬取决于你的决策。因此，请仔细阅读并理解实验信息。
 </p>
 <p style="font-size:16px">
+    实验当中电脑会随机将你与另外一个参与者进行匹配。你将与其他参与者在匿名的状态下互动进行决策，而你的最终的收益将取决于你和另一个参与者的决策。
+</p>
+<p style="font-size:16px">
     实验过程当中请不要与其他参与者交流。如果你在实验过程当中有任何问题，请举手示意，实验工作人员会前来，私下回答你的问题。
 </p>
     <p style="font-size:16px">
