--- a/coopetition_lab/templates/coopetition_lab/StartPage.html
+++ b/coopetition_lab/templates/coopetition_lab/StartPage.html
@@ -11,7 +11,7 @@
     你与另一名玩家（“对方”）匹配成功。
     </p>
     <p>
-        在这部分中，你将与<strong>同一名玩家</strong>进行  {{ Constants.interaction_length.0 }} 期的互动决策。
+        在这部分中，你将与<strong>同一名玩家</strong>进行多期的互动决策。
     </p>
     <p>
         <strong>
@@ -29,8 +29,7 @@
         You have just been matched with another participant.
     </p>
     <p>
-        You will interact with the same participant for <strong> {{ Constants.interaction_length.0 }} rounds
-        </strong> in this part.
+        You will interact with the same participant for multiple rounds in this part.
     </p>
     <p>
         <strong>
@@ -72,6 +71,7 @@
         {% include Constants.instructions_template %}
     </div>
 </div>
+
 
 {% endblock %}
 
