--- a/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions.html
+++ b/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions.html
@@ -38,7 +38,7 @@ Part 1 Instructions
             这一部分有多个决策周期，你需要在每一期做出相应的决策。
         <ul>
             <li>
-                你将随机的与另一个参与者匹配投资来进行决策。在剩下的决策周期当中，你会与这位（同一位）参与者交互进行决策。
+               实验开始时，电脑会随机将你与另一个参与者匹配。 在剩下的决策周期当中，你会与<strong>这位(同一位)参与者</strong>交互进行决策。
             </li>
             <li>
                 投资决策当中分为两个角色：玩家A和玩家B。
@@ -148,8 +148,8 @@ Part 1 Instructions
     {% else %}
     <div>
         <p>
-            这一部分有多个决策周期，你需要在每一期做出相应的决策。你将随机的与另一个参与者匹配投资来进行决策。
-            在剩下的决策周期当中，你都与这位（同一位）参与者交互进行决策。
+            这一部分有多个决策周期，你需要在每一期做出相应的决策。实验开始时，电脑会随机将你与另一个参与者匹配。
+            在剩下的决策周期当中，你将与<strong>这位(同一位)参与者</strong>交互进行决策。
         </p>
 
         <p style="text-align: center">
