--- a/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions_template.html
+++ b/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions_template.html
@@ -18,7 +18,8 @@
     {% if player.condition == "Asm" %}
     <div>
         <p>
-            每期开始，玩家A获得20份资源，玩家B获得10份资源。你需要决定在<b>投资账户</b>(\(x\))和<b>分配账户</b>(\(y\))中投入的资源。剩余资源作为个人留存。
+            每期开始，玩家A获得20份资源，玩家B获得10份资源。你需要决定在<b>投资账户</b>(\(x\))和<b>分配账户</b>(\(y\))中投入的资源
+            (只能选择整数份资源)。剩余资源作为个人留存。
         </p>
         <p>玩家的最总收益为
             {% if player.A == 0 %}
@@ -42,7 +43,7 @@
     {% else %}
     <div>
         <p>
-            每期开始，你将获得20份资源. 你需要决定在<b>投资账户</b>(\(x\))和<b>分配账户</b>(\(y\))中投入的资源。剩余资源(\(10-x_1-y_1\))作为个人留存。
+            每期开始，你将获得10份资源. 你需要决定在<b>投资账户</b>(\(x\))和<b>分配账户</b>(\(y\))中投入的资源(只能选择整数份资源)。剩余资源(\(10-x_1-y_1\))作为个人留存。
         </p>
     </div>
     {% if player.condition == "Det" %}
