--- a/coopetition_lab_quiz/templates/coopetition_lab_quiz/StartPage.html
+++ b/coopetition_lab_quiz/templates/coopetition_lab_quiz/StartPage.html
@@ -14,21 +14,23 @@
     你在本实验获得的报酬取决于你的决策。因此，请仔细阅读并理解实验信息。
 </p>
 <p style="font-size:16px">
+    实验当中电脑会随机将你与另外一个参与者进行匹配。你将与其他参与者在匿名的状态下互动进行决策，而你的最终的收益将取决于你和另一个参与者的决策。
+</p>
+<p style="font-size:16px">
     实验过程当中请不要与其他参与者交流。如果你在实验过程当中有任何问题，请举手示意，实验工作人员会前来，私下回答你的问题。
 </p>
     <p style="font-size:16px">
         你在实验当中将赚取实验货币$。实验结束后，实验货币$将按照如下转换率转换成真实货币：<strong>{{exchange_rate}}$ = 1 元</strong>
     </p>
 <p style="font-size:16px">
-本实验将会分为几个部分，并将持续大概30分钟。现在我们会介绍第一部分的相关信息。
+本实验将会分为几个部分，并将持续大概40分钟。现在我们会介绍第一部分的相关信息。
 </p>
 
 <p style="font-size:16px">
     实验信息之后将会有一些测试题来检测你对实验的理解。只有在你正确的回答全部问题之后，实验才会继续。如果你对测试题有任何问题，可以举手示意实验工作人员寻求帮助。
     </p>
-
     <p>
-        实验结束后，你至少能够获得30元的回报。取决于你和其他参与者的决策，你最终的回报最高可达{{ max_payment }}元。
+        实验结束后，你至少能够获得{{ min_payment }}元的回报。取决于你和其他参与者的决策，你最终的回报最高可达{{ max_payment }}元。
     </p>
 
 {% endif %}
@@ -63,7 +65,7 @@
         <!--the experiment and will not receive the payment for the HIT.-->
     </p>
     <p>
-        If you successfully complete the experiment, you will for sure receive RMB 30 as your minimum payment.
+        If you successfully complete the experiment, you will for sure receive RMB {{ min_payment }} as your minimum payment.
         Depending on your and the other participant's decision, you can also earn up to RMB {{ max_payment }}.
     </p>
 
