--- a/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions.html
+++ b/coopetition_lab_quiz/templates/coopetition_lab_quiz/Instructions.html
@@ -122,13 +122,13 @@ Part 1 Instructions
                 $$ \text{B的收益份额} =  \frac{y_B}{y_A + y_B} $$
                 <p>
                     举例来说，如果A投入6份资源到分配账户，B投入4份资源到分配账户(\(y_A=6,y_B=4\)), 由于分配账户中60%的资源属于A, A将获得60%的合作总收益。
-                    如果A投入5份资源，B也投入5份资源到分配账户(\(y_A=5,y_B=5\)), 那么A将获得60%的合作总收益。
+                    如果A投入5份资源，B也投入5份资源到分配账户(\(y_A=5,y_B=5\)), 那么A将获得50%的合作总收益。
                 </p>
                 <p>
                     如果两位玩家都投入0份资源到分配账户(\(y_A=y_B=0\)), 那么两位玩家将平分合作总收益。
                 </p>
             </li>
-            <li>玩家的最总收益为
+            <li>玩家的最终收益为
                 {% if player.A == 0 %}
                 $$\text{A的最终受益} = \underbrace{\frac{y_A}{y_A + y_B} \frac{x_A x_B}{2}}_{\text{合作总收益}} + \underbrace{20-x_A-y_A}_{\text{自我存留}}$$
                 $$\text{B的最终收益} = \underbrace{\frac{y_B}{y_A + y_B} \frac{x_A x_B}{2}}_{\text{合作总收益}} + \underbrace{10-x_B-y_B}_{\text{自我存留}}$$
@@ -223,18 +223,18 @@ Part 1 Instructions
                 $$ \text{你所得到的合作总收益的份额} = \frac{y_1}{y_1 + y_2} $$
                 <p>
                     举例来说，如果你投入6份资源到分配账户，对方投入4份资源到分配账户(\(y_1=6,y_2=4\)), 由于分配账户中60%的资源属于你, 你将获得60%的合作总收益。
-                    如果你投入5份资源，你也投入5份资源到分配账户(\(y_1=5,y_2=5\)), 那么你将获得60%的合作总收益。如果你和对方都投入0份资源到分配账户(\(y_A=y_B=0\)), 那么两位玩家将平分合作总收益。
+                    如果你投入5份资源，你也投入5份资源到分配账户(\(y_1=5,y_2=5\)), 那么你将获得50%的合作总收益。如果你和对方都投入0份资源到分配账户(\(y_A=y_B=0\)), 那么两位玩家将平分合作总收益。
                 </p>
 
             </li>
 
-            <li>你的最总收益为
+            <li>你的最终收益为
                 {% if player.A == 0 %}
-                $$\text{最总收益} =  \underbrace{\frac{y_1}{y_1 + y_2}x_1 x_2}_{\text{合作总收益}} +
+                $$\text{最终收益} =  \underbrace{\frac{y_1}{y_1 + y_2}x_1 x_2}_{\text{合作总收益}} +
                 \underbrace{10-x_1-y_1}_{\text{自我存留}}$$
                 {% endif %}
                 {% if player.A == 60 %}
-                $$\text{最总收益} =  \underbrace{\frac{y_1}{y_1 + y_2}(x_1 x_2+60)}_{\text{合作总收益}} +
+                $$\text{最终收益} =  \underbrace{\frac{y_1}{y_1 + y_2}(x_1 x_2+60)}_{\text{合作总收益}} +
                 \underbrace{10-x_1-y_1}_{\text{自我存留}}$$
                 {% endif %}
             </li>
