innovation management experiment

--- a/coopetition_inclass/templates/coopetition_inclass/WaitingInfo.html
+++ b/coopetition_inclass/templates/coopetition_inclass/WaitingInfo.html
@@ -42,13 +42,15 @@
     <li>
         当你是“玩家B”时，你每轮起始获得10份资源。
     </li>
-    <li>
-        当你与“对方”进行互动决策时，你将看到如下界面供你填写你的决策。
-    </li>
 </ul>
 </p>
 {% endif %}
-
+    <p>
+    当你与“对方”进行互动决策时，你将看到如下界面供你填写你的决策。
+    </p>
+<p style="text-align: center">
+    <img src="{% static "coopetition_mturk/decision_screen.png" %}"  width="780"/>
+</p>
 <p>
     注意：实验的进程取决于决策较慢的玩家，因此，请尽快填写并提交你的决定。在前五期中，你各有1分钟来做出你的决定。五期过后，每期你将有30秒做出你的决定。如果未能在指定时间内填写并提交你的决定，电脑将随机为你填写，你也无法获得当期的收益。如果你多次未能提交你的决定，你将无法获得整个实验的收益。
 </p>
@@ -89,7 +91,9 @@
     During your interaction with the other participant, the following experimental interface will be
     shown for you to submit your decisions.
 </p>
-
+<p style="text-align: center">
+    <img src="{% static "coopetition_mturk/decision_screen.png" %}"  width="780"/>
+</p>
 <p style="font-size:16px">
     Note:
     The experiment proceeds as fast as the slower participant, so please submit your decisions in a prompt manner.
