--- a/coopetition_mturk/templates/coopetition_mturk/History.html
+++ b/coopetition_mturk/templates/coopetition_mturk/History.html
@@ -10,8 +10,7 @@
 
 {% if player.round_in_interaction != 1 %}
 <h5 style="text-align:center">
-    {% if player.language != "EN" %}历史数据{% endif %}
-    {% if player.language != "CN" %}History{% endif %}
+History
 </h5>
 <table class="table" style="text-align:center">
     <tr>
