--- a/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds.html
+++ b/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds.html
@@ -11,8 +11,7 @@
 
 {% if player.round_number != 1 %}
 <h5 style="text-align:center">
-    {% if player.language != "EN" %}历史数据{% endif %}
-    {% if player.language != "CN" %}History{% endif %}
+History
 </h5>
 <table class="table" style="text-align:center">
     <tr>
