--- a/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds_previous.html
+++ b/coopetition_mturk/templates/coopetition_mturk/HistoryAllRounds_previous.html
@@ -11,8 +11,7 @@
 
 {% if player.interaction_number != 1 %}
   <h5 style="text-align:center">
-    {% if player.language != "EN" %}第一部分历史数据{% endif %}
-    {% if player.language != "CN" %}History for Part 1{% endif %}
+History for Part 1
 </h5>
 <table class="table" style="text-align:center">
     <tr>
