--- a/coopetition_inclass_quiz/templates/coopetition_inclass_quiz/StartPage.html
+++ b/coopetition_inclass_quiz/templates/coopetition_inclass_quiz/StartPage.html
@@ -19,9 +19,6 @@
 <p style="font-size:16px">
     实验过程当中请不要与其他参与者交流。如果你在实验过程当中有任何问题，请举手示意，实验工作人员会前来，私下回答你的问题。
 </p>
-    <p style="font-size:16px">
-        你在实验当中将赚取实验货币$。实验结束后，实验货币$将按照如下转换率转换成真实货币：<strong>{{exchange_rate}}$ = 1 元</strong>
-    </p>
 <p style="font-size:16px">
 本实验将会分为几个部分，并将持续大概30分钟。现在我们会介绍第一部分的相关信息。
 </p>
@@ -40,25 +37,20 @@
         In the experiment, the amount of money you can earn depends on your decisions.
         Therefore, it is important that you read these instructions carefully.
     </p>
+
 <p style="font-size:16px">
-    Earnings in the experiment are denominated by experimental dollar $. You will earn $ throughout the experiment. At the end of the experiment, these dollars will be converted into real money at
-    the exchange rate of <strong>{{ exchange_rate }} $ = RMB 1.</strong>
+    This experiment consists of several parts. We will now go through the instructions for Part I.
 </p>
 
 <p style="font-size:16px">
-    This experiment consists of several part and will take approximately 30 minutes.
-    We will now go through the instructions for Part I.
-</p>
-
-<p style="font-size:16px">
-    At the end of these instructions, you will be asked to take a quiz to ensure that you understand the instructions. You can only
-    start the experiment after you successfully answer all the questions. You can ask the experimenter for help if you have questions
-    about the quiz. The experiment continues only after you have correctly answered all the quiz questions.
+    At the end of these instructions, you will be asked to take a quiz to ensure that you understand the instructions.
+    The experiment continues only after you have correctly answered all the quiz questions.
     </p>
 
 
 {% endif %}
-    <div style="text-align:right">
-    {% next_button %}
-    </div>
+
+    <!--<div style="text-align:right">-->
+    <!--{% next_button %}-->
+    <!--</div>-->
 {% endblock %}
