--- a/repeated_game_PD/templates/repeated_game_PD/Instructions.html
+++ b/repeated_game_PD/templates/repeated_game_PD/Instructions.html
@@ -12,19 +12,19 @@
             <th colspan=2>Other participant</th>
         </tr>
         <tr>
-            <th style="text-align:center">A</th>
-            <th style="text-align:center">B</th>
+            <th style="text-align:center;color:red;">A</th>
+            <th style="text-align:center;color:red;">B</th>
         </tr>
         <tr>
             <th rowspan=2><span class="rotate90">You</span></th>
-            <th align ="center">A</th>
-            <td>{{ Constants.R}}, {{ Constants.R}}</td>
-            <td>{{ Constants.S}}, {{ Constants.T}}</td>
+            <th align ="center" style="color:blue;">A</th>
+            <td><span style="color:blue;">{{ p11}}</span>, <span style="color:red;">{{ p11o }}</span></td>
+            <td><span style="color:blue;">{{ p12}}</span>, <span style="color:red;">{{ p21o }}</span></td>
         </tr>
         <tr>
-            <th align = "center">B</th>
-            <td>{{ Constants.T}}, {{ Constants.S}}</td>
-            <td>{{ Constants.P}}, {{ Constants.P}}</td>
+            <th align = "center" style="color:blue;">B</th>
+            <td><span style="color:blue;">{{ p21 }}</span>, <span style="color:red;">{{ p12o }}</span></td>
+            <td><span style="color:blue;">{{ p22 }}</span>, <span style="color:red;">{{ p22o }}</span></td>
         </tr>
     </table>
 
@@ -32,7 +32,7 @@
     {% if player.treatment == 'fixed' %}
     <p>
     You will be playing with <strong> the same </strong>
-        participant in different rounds.
+        participant for this game.
     <p>
     {% endif %}
     {% if player.treatment == 'random' %}
