--- a/repeated_game_randpay/templates/repeated_game_randpay/InteractionResults.html
+++ b/repeated_game_randpay/templates/repeated_game_randpay/InteractionResults.html
@@ -17,13 +17,13 @@
 
         <p>
             <strong>
-               The round that is selected for payment is Round {{ paying_round }}.
+               Rounds selected for payment:  {{ paying_rounds }}.
             </strong>
         </p>
 
         <p>
             <strong>
-        Your earnings for this part is {{ player.cum_payoff }}.
+        Your earnings for this part: {{ player.cum_payoff }}.
             </strong>
         </p>
 
