--- a/payment_inclass/templates/payment_inclass/PaymentInfo.html
+++ b/payment_inclass/templates/payment_inclass/PaymentInfo.html
@@ -8,9 +8,14 @@
 {% block content %}
 
 <p>This is the end of the experiment. Thank you for your participation.</p>
-<p>You total earnings in the experiment is {{experiment_payoff}}.</p>
-<p><strong> You final payment of the experiment is {{final_payment}}.</strong> </p>
+<p>Your experimental earnings is {{experiment_payoff}}.</p>
 
+{% if final_payment > 0 %}
+You are among the top {{num_payment}} participants.
+<p><strong> You final payment of the experiment is {{final_payment}}.</strong> </p>
+{% else %}
+You are NOT among the top {{num_payment}} participants.
+{% endif %}
 {% endblock %}
 
 {% block form %}
