--- a/repeated_game_PD/templates/repeated_game_PD/Introduction.html
+++ b/repeated_game_PD/templates/repeated_game_PD/Introduction.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree %}
 
 {% block title %}
-Instruction for the next part
+Instructions for the next part
 {% endblock %}
 
 {% block content %}
